Tablet: Layout issue & image issue resolved

--- a/app/style.css
+++ b/app/style.css
@@ -398,3 +398,23 @@ footer {
     justify-self: center;
   }
 }
+/* Tablet */
+@media ((min-width: 501px) and (max-width: 900px)) {
+  :where(.hero__container, .stories, .design) .image__col {
+    display: flex;
+    height: 100%;
+  }
+  .stories__card {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .benefit {
+    flex-direction: column;
+  }
+  .benefit .benefit-content {
+    width: 70%;
+  }
+  .footer {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
